# pyavddl

./: README.md  pyproject.toml  setup.py
pyamddl/: __init__.py  config.py
pyamddl/ddl_retrievers/: spotify_ddl_retriever.py  tiktok_ddl_retriever.py  universal_ddl_retrieve.py
pyamddl/models/: queue_object.py
pyamddl/platform_handlers/: audio_content_type_finder.py  music_platform_finder.py  music_url_getter.py
src/pyavddl/: __init__.py
src/pyavddl/ddl_retrievers/: spotify_ddl_retriever.py  tiktok_ddl_retriever.py  universal_ddl_retrieve.py
src/pyavddl/platform_handlers/: audio_content_type_finder.py  music_platform_finder.py  music_url_getter.py
